src/index.css
/* Page */
html {
  box-sizing: border-box;
}

*,
*:before,
*:after {
  box-sizing: inherit;
}

html,
body,
#root {
  height: 100%;
  width: 100%;
}

body {
  font-family: 'Fira code', 'Fira Mono', Consolas, Menlo, Courier, monospace;
  font-size: 14px;
  line-height: 1.5;
  margin: 0;
  padding: 0;
}

/* App */
.container {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  
}

@media only screen and (max-width: 600px) {
  .container__content {
    width: 100%;
    text-align: center;
    padding-left: 10px;
    padding-right: 20px;
  }
  .container_wrapper {
    display: flex;
    justify-content: normal;
    flex-direction: column;
  }

  .container_editor_area {
    max-height: 200px;
  }
}

@media only screen and (min-width: 600px) {
  .container__content {
    width: 100%;
    text-align: center;
    padding-left: 10px;
    padding-right: 20px;
    flex-direction: column;
  }
  .container_wrapper {
    display: flex;
    justify-content: normal;
  }
}

.container_editor_area {
  tab-size: 4ch;
  max-height: 75vh;
  overflow: auto;
  margin: 1.67em 0;
  min-width: 50%;
}

.container_editor_tools {
  display: flex;
  background-color:  #fafafa;
  padding: 10px;
}

.container_editor_area::-webkit-scrollbar-track {
  background-color:  #fafafa;
}

.container_editor_area::-webkit-scrollbar {
  width: 5px;               /* width of the entire scrollbar */
}
.container_editor_area::-webkit-scrollbar-thumb {
  border: 1px solid #9e9e9e;  /* creates padding around scroll thumb */
  background-color: #9e9e9e;
}

.container__editor {
  font-size: 12px;
  font-variant-ligatures: common-ligatures;
  background-color: #fafafa;
  border-radius: 3px;
}

.container__editor textarea {
  outline: 0;
}

.container_result_tools {
  padding: 10px;
}

.button {
  display: inline-block;
  padding: 0 6px;
  text-decoration: none;
  background: #000;
  color: #fff;
}

.button:hover {
  background: linear-gradient(45deg, #E42B66, #E2433F);
}

/* Syntax highlighting */
.token.comment,
.token.prolog,
.token.doctype,
.token.cdata {
  color: #90a4ae;
}
.token.punctuation {
  color: #9e9e9e;
}
.namespace {
  opacity: 0.7;
}

.token.boolean {
  color: #4285F4;
}

.token.property,
.token.tag,
.token.number,
.token.constant,
.token.symbol,
.token.deleted {
  color: #9c27b0;
}
.token.selector,
.token.attr-name,
.token.string,
.token.char,
.token.builtin,
.token.inserted {
  color: #0F9D58;
}
.token.operator,
.token.entity,
.token.url,
.language-css .token.string,
.style .token.string {
  color: #795548;
}
.token.atrule,
.token.attr-value,
.token.keyword {
  color: #3f51b5;
}
.token.function {
  color: #DB4437;
}
.token.regex,
.token.important,
.token.variable {
  color: #ff9800;
}
.token.important,
.token.bold {
  font-weight: bold;
}
.token.italic {
  font-style: italic;
}
.token.entity {
  cursor: help;
}

.error {
  color: #DB4437;
  margin: 10px;
}

.warning {
  color: #F4B400;
  margin: 10px;
}

p {
  margin: 0;
}

h1 {
  margin-bottom: 0px;
}

a {
  color: black;
  text-decoration: none;
}

a:hover {
  text-decoration: underline;
}

svg {
  cursor: pointer;
}

#coffee {
  font-size: 20px;
}

input {
  margin-top: 20px;
  font-family: "Fira code","Fira Mono",Consolas,Menlo,Courier,monospace;
}


.container__footer {
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding-left: 10px;
}

.footer__copyright {
  display: flex;
  align-items: center;
}

footer {
  display: flex;
  width: 100%;
  justify-content: space-between;
}

